--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="javascript.js"></script>
-    <link rel="stylesheet" href="style.css" /
+    <link rel="stylesheet" href="style.css" />
+    <!--<a href=”about.html”>Link to About Page </a>
+    <a href=”portfolio.html”>Link to Portfolio Page </a>-->
+
 </head>
 <body>
-    
+    <nav>
+    <a href=index.html”>Home</a> |
+    <a href=”about.html”>About</a> |
+    <a href=”portfolio.html”>Portfolio</a> |
+    </nav>
+
+    <p>Student, Builder, Innovator</p>
+    <p>The only constant in the technology industry is change.</p>
+    <p>-Marc Benioff</p>
 </body>
 </html>
