--- a/about.html
+++ b/about.html
@@ -5,9 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="javascript.js"></script>
-    <link rel="stylesheet" href="style.css" /
+    <link rel="stylesheet" href="style.css" />
+    <!--<a href=index.html”>Link to About Page </a>
+    <a href=”portfolio.html”>Link to Portfolio Page </a>
+    -->
 </head>
+
+
 <body>
-    
+    <nav>
+        <a href=index.html”>Home</a> |
+        <a href=”about.html”>About</a> |
+        <a href=”portfolio.html”>Portfolio</a> |
+    </nav>
+
+    <section class="Building">
+        <h1>Building</h1>
+        <p></p>
+
+    </section>
+
+
+    <section class="Reading">
+        <h1>Reading</h1>
+        <p></p>
+
+    </section>
+
+
+    <section class="Sports">
+        <h1>Sports</h1>
+        <p></p>
+
+    </section>
 </body>
 </html>
