--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="javascript.js"></script>
-    <link rel="stylesheet" href="style.css" /
+    <link rel="stylesheet" href="style.css" />
+    <!--<a href=”about.html”>Link to About Page </a>
+    <a href=index.html”>Link to Home Page </a>
+    -->
 </head>
 <body>
+    <nav>
+        <a href=index.html”>Home</a> |
+        <a href=”about.html”>About</a> |
+        <a href=”portfolio.html”>Portfolio</a> |
+    </nav>
+
+    <section class="porject">
+        <h1>First Project</h1>
+        <p></p>
+
+    </section>
+
+
+    <section class="porject">
+        <h1>Second Project</h1>
+        <p></p>
+
+    </section>
+
+
+    <section class="porject">
+        <h1>Thrird Project</h1>
+        <p></p>
+
+
     
 </body>
 </html>
