--- a/about.html
+++ b/about.html
@@ -6,22 +6,25 @@
     <title>Document</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <!--<a href=index.html”>Link to About Page </a>
-    <a href=”portfolio.html”>Link to Portfolio Page </a>
-    -->
+
 </head>
 
 
 <body>
     <nav>
-        <a href=index.html”>Home</a> |
-        <a href=”about.html”>About</a> |
-        <a href=”portfolio.html”>Portfolio</a> |
+        <a href="index.html">Home</a> |
+        <a href="about.html">About</a> |
+        <a href="portfolio.html">Portfolio</a> |
     </nav>
 
     <section class="Building">
         <h1>Building</h1>
-        <p></p>
+        <p>For as long as I can remember I have always loved creating and building new things. 
+            Be it playing with Legos as a child or building PCs and doing basic home upgrades as an adult. 
+            Most recently I have really enjoyed learning about and doing more software development. 
+            throughout my personal and professional life, I have learned to build many things, as an AWS Datatech 
+            I can take apart and put back together multiple server types. I have a good grasp on python and I’m now moving on to JavaScript 
+            and when I’m done with that I will probably move on to a new subject.</p>
 
     </section>
 
