--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <title>Document</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <!--<a href=”about.html”>Link to About Page </a>
-    <a href=”portfolio.html”>Link to Portfolio Page </a>-->
 
 </head>
 <body>
     <nav>
-    <a href=index.html”>Home</a> |
-    <a href=”about.html”>About</a> |
-    <a href=”portfolio.html”>Portfolio</a> |
-    </nav>
+        <a href="index.html">Home</a> |
+        <a href="about.html">About</a> |
+        <a href="portfolio.html">Portfolio</a> |
 
+    </nav>
+    <div>
+    </div>
+    
     <p>Student, Builder, Innovator</p>
     <p>The only constant in the technology industry is change.</p>
     <p>-Marc Benioff</p>
