--- a/portfolio.html
+++ b/portfolio.html
@@ -6,15 +6,13 @@
     <title>Document</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <!--<a href=”about.html”>Link to About Page </a>
-    <a href=index.html”>Link to Home Page </a>
-    -->
+    
 </head>
 <body>
     <nav>
-        <a href=index.html”>Home</a> |
-        <a href=”about.html”>About</a> |
-        <a href=”portfolio.html”>Portfolio</a> |
+        <a href="index.html">Home</a> |
+        <a href="about.html">About</a> |
+        <a href="portfolio.html">Portfolio</a> |
     </nav>
 
     <section class="porject">
