--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="style.css" />
-
-</head>
-<body>
-    <nav>
-        <a href="index.html">Home</a> |
-        <a href="about.html">About</a> |
-        <a href="portfolio.html">Portfolio</a> |
-
-    </nav>
-    <div>
+  </head>
+  <body>
+    <div class="row">
+      <div class="column"></div>
+      <div class="column"></div>
+      <div class="column"></div>
     </div>
-    
+    <nav>
+      <a href="index.html">Home</a> | <a href="about.html">About</a> |
+      <a href="portfolio.html">Portfolio</a> |
+    </nav>
+    <div></div>
+
     <p>Student, Builder, Innovator</p>
     <p>The only constant in the technology industry is change.</p>
     <p>-Marc Benioff</p>
-</body>
+  </body>
 </html>
