--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,12 @@
     
 </head>
 <body>
+    <div class="row">
+        <div class="column"></div>
+        <div class="column"></div>
+        <div class="column"></div>
+      </div>
+      
     <nav>
         <a href="index.html">Home</a> |
         <a href="about.html">About</a> |
