--- a/about.html
+++ b/about.html
@@ -8,14 +8,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
+  <nav>
+    <a href="index.html">Home</a> | <a href="about.html">About</a> |
+    <a href="portfolio.html">Portfolio</a> |
+  </nav>
+
   <body>
+
     <!-- create columns -->
     <div class="row">
       <!-- column 1 -->
-      <div class="column"><p></p></div>
+      <div class="column"></div>
 
       <!-- column 2 -->
-      <div class="column">
+      <div class="column2">
         <section class="Building">
           <!-- about 1 -->
           <h1>Building</h1>
@@ -75,10 +81,7 @@
 
       <!-- column 3 -->
       <div class="column">
-        <nav>
-          <a href="index.html">Home</a> | <a href="about.html">About</a> |
-          <a href="portfolio.html">Portfolio</a> |
-        </nav>
+
       </div>
     </div>
   </body>
