--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Imran Malik</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -14,7 +14,6 @@
   </nav>
 
   <body>
-
     <!-- create columns -->
     <div class="row">
       <!-- column 1 -->
@@ -36,9 +35,7 @@
             I’m now moving on to JavaScript and when I’m done with that I will
             probably move on to a new subject.
           </p>
-          <img src="buidling.jpg" alt="healthy foods">
-
-
+          <img src="buidling.jpg" alt="healthy foods" />
         </section>
 
         <section class="Reading">
@@ -56,7 +53,7 @@
             subject does strike my interest, I can lose hours in a good book
             tuning out the world and really getting engrossed into a good book.
           </p>
-          <img src="reading.jpg" alt="healthy foods">
+          <img src="reading.jpg" alt="healthy foods" />
         </section>
 
         <section class="Sports">
@@ -75,14 +72,12 @@
             end up playing at least one a week, I have pulled multiple muscles
             and been sore every morning after playing but I love it.
           </p>
-          <img src="sports.jpg" alt="healthy foods">
+          <img src="sports.jpg" alt="healthy foods" />
         </section>
       </div>
 
       <!-- column 3 -->
-      <div class="column">
-
-      </div>
+      <div class="column"></div>
     </div>
   </body>
 </html>
