--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Imran Malik</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <nav>
-    
     <a href="index.html">Home</a> | 
     <a href="about.html">About</a> |
     <a href="portfolio.html">Portfolio</a> |
