--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
   </head>
 
   <nav>
-    <a href="index.html">Home</a> | <a href="about.html">About</a> |
+    <a href="index.html">Home</a> | 
+    <a href="about.html">About</a> |
     <a href="portfolio.html">Portfolio</a> |
   </nav>
 
