--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,8 @@
 </head>
 
 <nav>
-    <a href="index.html">Home</a> | <a href="about.html">About</a> |
+    <a href="index.html">Home</a> | 
+    <a href="about.html">About</a> |
     <a href="portfolio.html">Portfolio</a> |
   </nav>
 
