--- a/SuccessPg.html
+++ b/SuccessPg.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Success</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -16,13 +16,6 @@
   </nav>
 
   <body>
-    <h1>Contact</h1>
-    <form>
-      <label for="name">Name:</label><br />
-      <input type="text" id="name" name="name" /><br />
-      <label for="email">Email:</label><br />
-      <input type="text" id="email" name="email"/><br /><br />
-      <button type="submit" formaction="SuccessPg.html">Submit</button>
-    </form>
+    <H1>Submission was Successful</H1>
   </body>
 </html>
