--- a/SuccessPg.html
+++ b/SuccessPg.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -16,6 +16,6 @@
   </nav>
 
   <body>
-    <H1>Submission was Successful</H1>
+    <h1 id="success">Submission was Successful</h1>
   </body>
-</html>
+</html*/
