--- a/contact.html
+++ b/contact.html
@@ -15,14 +15,16 @@
     <a href="contact.html">Contact</a> | 
   </nav>
 
-  <body>
+  <body class="container">
     <h1>Contact</h1>
-    <form>
-      <label for="name">Name:</label><br />
-      <input type="text" id="name" name="name" /><br />
-      <label for="email">Email:</label><br />
-      <input type="text" id="email" name="email"/><br /><br />
-      <button type="submit" formaction="SuccessPg.html">Submit</button>
-    </form>
+    <section class = "textbox">
+      <form>
+        <label for="name">Name:</label><br />
+        <input type="text" id="name" name="name" /><br />
+        <label for="email">Email:</label><br />
+        <input type="text" id="email" name="email"/><br /><br />
+        <button type="submit" formaction="SuccessPg.html">Submit</button>
+      </form>
+    </section>
   </body>
 </html>
