--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="contact.html">Contact</a> | 
   </nav>
 
-  <body>
+  <body class="container">
     <div class="row">
       <div class="column"></div>
       <div class="column">
