--- a/contact.html
+++ b/contact.html
@@ -9,20 +9,19 @@
   </head>
 
   <nav>
-    <a href="index.html">Home</a> | 
-    <a href="about.html">About</a> |
+    <a href="index.html">Home</a> | <a href="about.html">About</a> |
     <a href="portfolio.html">Portfolio</a> |
-    <a href="contact.html">Contact</a> | 
+    <a href="contact.html">Contact</a> |
   </nav>
 
   <body class="container">
     <h1>Contact</h1>
-    <section class = "textbox">
+    <section class="textbox">
       <form>
         <label for="name">Name:</label><br />
         <input type="text" id="name" name="name" /><br />
         <label for="email">Email:</label><br />
-        <input type="text" id="email" name="email"/><br /><br />
+        <input type="text" id="email" name="email" /><br /><br />
         <button type="submit" formaction="SuccessPg.html">Submit</button>
       </form>
     </section>
